--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,4 @@
 canvas {
-	background: transparent url(../img/gridBackground.gif) 0 0 repeat;
+	/*background: transparent url(../img/gridBackground.gif) 0 0 repeat;*/
 	border: 5px solid #000;
 }
